; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/common/osi/extr_fixed_queue.c_fixed_queue_try_peek_first.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/common/osi/extr_fixed_queue.c_fixed_queue_try_peek_first.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@OSI_MUTEX_MAX_TIMEOUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fixed_queue_try_peek_first(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* null, i8** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = icmp eq %struct.TYPE_3__* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %31

8:                                                ; preds = %1
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* @OSI_MUTEX_MAX_TIMEOUT, align 4
  %12 = call i32 @osi_mutex_lock(i32* %10, i32 %11)
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @list_is_empty(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %8
  br label %24

19:                                               ; preds = %8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32* @list_front(i32 %22)
  br label %24

24:                                               ; preds = %19, %18
  %25 = phi i32* [ null, %18 ], [ %23, %19 ]
  %26 = bitcast i32* %25 to i8*
  store i8* %26, i8** %4, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = call i32 @osi_mutex_unlock(i32* %28)
  %30 = load i8*, i8** %4, align 8
  store i8* %30, i8** %2, align 8
  br label %31

31:                                               ; preds = %24, %7
  %32 = load i8*, i8** %2, align 8
  ret i8* %32
}

declare dso_local i32 @osi_mutex_lock(i32*, i32) #1

declare dso_local i64 @list_is_empty(i32) #1

declare dso_local i32* @list_front(i32) #1

declare dso_local i32 @osi_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
